--- a/portfolio.html
+++ b/portfolio.html
@@ -4,112 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Saurav Pundir - Portfolio</title>
-    <style>
-        /* Basic CSS - Customize this! */
-        body { font-family: sans-serif; margin: 0; padding: 0; background-color: #f0f0f0; color: #333; }
-        header { background-color: #333; color: #fff; padding: 20px; text-align: center; }
-        section { padding: 20px; margin: 20px; background-color: #fff; border-radius: 5px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); }
-        img { max-width: 200px; height: auto; float: left; margin-right: 20px; }
-        footer { background-color: #333; color: #fff; padding: 10px; text-align: center; }
-
-    
-        
-        body {
-            font-family: 'Arial', sans-serif; /* Modern font */
-            margin: 10px;
-            background: linear-gradient(to bottom right, #f0f0f0, #e0e0e0); /* Subtle gradient background */
-            color: #333;
-            line-height: 1.6; /* Improved readability */
-        }
-
-        header {
-            background-color: #333;
-            color: #fff;
-            padding: 20px;
-            text-align: center;
-        }
-
-        h1 {
-            font-size: 2.5em;
-            margin-bottom: 10px;
-        }
-
-        h2 {
-            font-size: 1.8em;
-            margin-bottom: 20px;
-            border-bottom: 2px solid #ddd; /* Subtle underline */
-            padding-bottom: 10px;
-        }
-
-        section {
-            padding: 30px;
-            margin: 20px;
-            background-color: #fff;
-            border-radius: 8px; /* More rounded corners */
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* More pronounced shadow */
-            transition: transform 0.3s ease; /* Smooth hover effect */
-        }
-
-        section:hover {
-            transform: translateY(-5px); /* Move up slightly on hover */
-        }
-
-        ul {
-            list-style-type: disc;
-            padding-left: 20px;
-        }
-
-        li {
-            margin-bottom: 10px;
-        }
-
-        .project {
-            margin-bottom: 20px;
-            border: 1px solid #eee; /* Light border for projects */
-            padding: 20px;
-            border-radius: 5px;
-        }
-
-        .project h3 {
-            margin-top: 0;
-        }
-
-        a {
-            color: #007bff; /* Blue link color */
-            text-decoration: none;
-            transition: color 0.3s ease;
-        }
-
-        a:hover {
-            color: #0056b3; /* Darker blue on hover */
-        }
-
-
-        footer {
-            background-color: #333;
-            color: #fff;
-            padding: 10px;
-            text-align: center;
-            margin-top: 20px;
-        }
-
-
-        /* Responsive Design (Basic) */
-        @media (max-width: 768px) {
-            section {
-                padding: 20px;
-                margin: 10px;
-            }
-
-            h1 {
-                font-size: 2em;
-            }
-
-            h2 {
-                font-size: 1.5em;
-            }
-        }
-</style>
+    <link rel="stylesheet" href="portfolio.css">
 </head>
 <body>
     <header>
